--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,10 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.jakewharton:butterknife:8.4.0'
-    compile 'com.pnikosis:materialish-progress:1.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
+    compile 'com.pnikosis:materialish-progress:1.0'
+    compile 'com.android.support:design:24.0.0'
+    compile 'com.google.zxing:core:3.2.1'
+
 }
 
