--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activity.demo.paint.PaintActivity"/>
+        <activity android:name=".activity.demo.view.paint.PaintActivity"/>
+        <activity android:name=".activity.demo.view.image.WaveViewActivity"/>
         <activity android:name=".activity.demo.widget.wheelpicker.WheelPickerActivity"/>
         <activity android:name=".activity.demo.widget.sweetalert.SweetAlertActivity"/>
         <activity android:name=".activity.demo.widget.qrcode.DecoderActivity"/>
