--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'com.antfortune.freeline'
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.0"
-    enforceUniquePackageName=false
+    enforceUniquePackageName = false
     publishNonDefault true
     defaultPublishConfig "debug"
 
@@ -18,7 +18,26 @@ android {
     }
 
     dexOptions {
-        javaMaxHeapSize '4g'
+        preDexLibraries = false
+        javaMaxHeapSize "4g"
+    }
+
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+
+        // Move the tests to tests/java, tests/res, etc...
+        //instrumentTest.setRoot('tests')
+
+        // Move the build types to build-types/<type>
+        // For instance, build-types/debug/java, build-types/debug/AndroidManifest.xml, ...
+        // This moves them out of them default location under src/<type>/... which would
+        // conflict with src/ being used by the main source set.
+        // Adding new build types or product flavors should be accompanied
+        // by a similar customization.
+        debug.setRoot('build-types/debug')
+        release.setRoot('build-types/release')
     }
 
     buildTypes {
@@ -34,7 +53,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.jakewharton:butterknife:8.4.0'
@@ -42,6 +61,6 @@ dependencies {
     compile 'com.pnikosis:materialish-progress:1.0'
     compile 'com.android.support:design:24.0.0'
     compile 'com.google.zxing:core:3.2.1'
-
+    compile files('libs/ikey_sdk.jar')
 }
 
