--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,5 +62,6 @@ dependencies {
     compile 'com.android.support:design:24.0.0'
     compile 'com.google.zxing:core:3.2.1'
     compile files('libs/ikey_sdk.jar')
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
 
