--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,6 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
         <activity android:name=".activity.demo.view.paint.PaintActivity"/>
         <activity android:name=".activity.demo.view.image.WaveViewActivity"/>
         <activity android:name=".activity.demo.widget.wheelpicker.WheelPickerActivity"/>
@@ -33,9 +32,8 @@
         <activity android:name=".activity.demo.widget.qrcode.DecoderActivity"/>
         <activity android:name=".activity.demo.widget.marqueeview.MarqueeViewActivity"/>
         <activity android:name=".activity.demo.security.ca.SecurityCAActivity"/>
-
         <activity android:name=".activity.guide.GuideMainActivity"/>
-
+        <activity android:name=".activity.demo.widget.swipecard.SwipeCardActivity"/>
     </application>
 
 </manifest>
