--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,5 +63,6 @@ dependencies {
     compile 'com.google.zxing:core:3.2.1'
     compile files('libs/ikey_sdk.jar')
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'jp.wasabeef:blurry:2.1.0'
 }
 
