--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,18 +58,35 @@ android {
 
 }
 
+
+repositories {
+    maven {
+        url 'https://github.com/uPhyca/stetho-realm/raw/master/maven-repo'
+    }
+}
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
+
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
+
     compile 'com.pnikosis:materialish-progress:1.0'
     compile 'com.android.support:design:24.0.0'
-    compile 'com.google.zxing:core:3.2.1'
+
+    compile 'com.facebook.stetho:stetho:1.4.2'
+    compile 'com.uphyca:stetho_realm:2.0.0'
+
     compile files('libs/ikey_sdk.jar')
+    compile 'com.google.zxing:core:3.2.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'jp.wasabeef:blurry:2.1.0'
-    compile files('libs/Native_Libs2.jar')
+    compile 'com.google.code.gson:gson:2.8.0'
+
 }
 
