--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,6 @@
     <uses-feature android:name="android.hardware.camera"/>
     <uses-feature android:name="android.hardware.camera.autofocus"/>
 
-    <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
-    <uses-permission android:name="android.permission.READ_PROFILE"/>
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
-
     <application
         android:name=".application.ExApplication"
         android:allowBackup="true"
@@ -42,8 +37,7 @@
         <activity android:name=".activity.demo.widget.swipecard.SwipeCardActivity"/>
         <activity android:name=".activity.demo.widget.blurry.BlurryActivity"/>
         <activity
-            android:name=".activity.MainActivity"
-            android:label="@string/title_activity_login">
+            android:name=".activity.MainActivity">
         </activity>
 
         <meta-data android:name="twcal" android:value="E60BD8CEB3E4F587"/>
