--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.0"
+    buildToolsVersion '25.0.0'
     enforceUniquePackageName = false
     publishNonDefault true
     defaultPublishConfig "debug"
@@ -56,6 +56,11 @@ android {
         hack true
     }
 
+    repositories {
+        flatDir {
+            dirs 'libs'
+        }
+    }
 }
 
 
@@ -70,23 +75,27 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.2.0'
 
-    compile 'com.jakewharton:butterknife:8.4.0'
-    apt 'com.jakewharton:butterknife-compiler:8.4.0'
 
-    compile 'com.pnikosis:materialish-progress:1.0'
-    compile 'com.android.support:design:24.0.0'
 
-    compile 'com.facebook.stetho:stetho:1.4.2'
-    compile 'com.uphyca:stetho_realm:2.0.0'
 
     compile files('libs/ikey_sdk.jar')
+
+    compile(name: 'moxie-client-1.2.6', ext: 'aar')
+
+    compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.jakewharton:butterknife:8.4.0'
+    compile 'com.pnikosis:materialish-progress:1.0'
+    compile 'com.android.support:design:24.2.0'
+    compile 'com.facebook.stetho:stetho:1.4.2'
+    compile 'com.uphyca:stetho_realm:2.0.0'
     compile 'com.google.zxing:core:3.2.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'jp.wasabeef:blurry:2.1.0'
     compile 'com.google.code.gson:gson:2.8.0'
-
+    compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
+    testCompile 'junit:junit:4.12'
+    apt 'com.jakewharton:butterknife-compiler:8.4.0'
 }
 
