--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.dmio.org.tut">
 
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
@@ -37,15 +39,15 @@
         <activity android:name=".activity.demo.widget.swipecard.SwipeCardActivity" />
         <activity android:name=".activity.demo.widget.blurry.BlurryActivity" />
         <activity android:name=".activity.demo.moxie.MoxieActivity" />
-        <activity android:name=".activity.MainActivity"></activity>
-
-        <activity android:name=".activity.demo.moxie.WebViewActivity"></activity>
-        <activity android:name="com.moxie.client.MainActivity"></activity>
+        <activity android:name=".activity.MainActivity" />
+        <activity android:name=".activity.demo.moxie.WebViewActivity" />
+        <activity android:name="com.moxie.client.MainActivity" />
 
         <meta-data
             android:name="twcal"
             android:value="E60BD8CEB3E4F587" />
 
+        <activity android:name=".activity.list.ListRefreshRecyclerViewActivity"></activity>
     </application>
 
 </manifest>
