--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,8 @@ apply plugin: 'com.antfortune.freeline'
 apply plugin: 'realm-android'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 25
+    buildToolsVersion '25.0.2'
     enforceUniquePackageName = false
     publishNonDefault true
     defaultPublishConfig "debug"
@@ -13,7 +13,7 @@ android {
     defaultConfig {
         applicationId "com.dmio.org.tut"
         minSdkVersion 15
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
 
@@ -75,15 +75,11 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
     testCompile 'junit:junit:4.12'
-
     compile files('libs/ikey_sdk.jar')
-
-    compile 'com.android.support:design:24.2.1'
-    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
-
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.pnikosis:materialish-progress:1.0'
@@ -93,13 +89,12 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'jp.wasabeef:blurry:2.1.0'
     compile 'com.google.code.gson:gson:2.8.0'
-
     compile(name: 'moxie-client-1.2.7', ext: 'aar')
     compile 'org.greenrobot:eventbus:3.0.0'
-
     compile 'com.cleveroad:fireworkypulltorefresh:1.0.3'
     compile 'com.baoyz.pullrefreshlayout:library:1.2.0'
     compile 'com.cjj.materialrefeshlayout:library:1.3.0'
-
+    compile project(':view')
+    compile project(':core')
 }
 
