--- a/view/src/main/AndroidManifest.xml
+++ b/view/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-
     package="com.noo.view">
 
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true">
-
+        <activity android:name="com.noo.core.BaseActivity"></activity>
     </application>
 
 </manifest>
