--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
         <activity android:name=".activity.demo.widget.blurry.BlurryActivity" />
         <activity android:name=".activity.list.ListRecyclerActivity" />
         <activity android:name=".activity.MainActivity" />
+        <activity android:name=".activity.demo.widget.progress.ProgressWheelActivity" />
 
         <activity android:name=".activity.demo.moxie.MoxieActivity" />
         <activity android:name=".activity.demo.moxie.WebViewActivity" />
