--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.dmio.org.tut">
+          xmlns:tools="http://schemas.android.com/tools"
+          package="com.dmio.org.tut">
 
-    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
 
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
-
-    <uses-feature android:name="android.hardware.camera" />
-    <uses-feature android:name="android.hardware.camera.autofocus" />
+    <uses-feature android:name="android.hardware.camera"/>
+    <uses-feature android:name="android.hardware.camera.autofocus"/>
 
     <application
         android:name=".application.ExApplication"
@@ -23,35 +21,35 @@
         android:supportsRtl="true"
         android:theme="@style/AppBaseTheme"
         tools:replace="android:icon">
-
         <activity android:name=".activity.login.LoginActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
-        <activity android:name=".activity.demo.view.paint.PaintActivity" />
-        <activity android:name=".activity.demo.view.image.WaveViewActivity" />
-        <activity android:name=".activity.demo.widget.wheelpicker.WheelPickerActivity" />
-        <activity android:name=".activity.demo.widget.sweetalert.SweetAlertActivity" />
-        <activity android:name=".activity.demo.widget.qrcode.DecoderActivity" />
-        <activity android:name=".activity.demo.widget.marqueeview.MarqueeViewActivity" />
-        <activity android:name=".activity.demo.security.ca.SecurityCAActivity" />
-        <activity android:name=".activity.guide.GuideMainActivity" />
-        <activity android:name=".activity.demo.widget.swipecard.SwipeCardActivity" />
-        <activity android:name=".activity.demo.widget.blurry.BlurryActivity" />
-        <activity android:name=".activity.list.ListRecyclerActivity" />
-        <activity android:name=".activity.MainActivity" />
-        <activity android:name=".activity.demo.widget.progress.ProgressWheelActivity" />
-
-        <activity android:name=".activity.demo.moxie.MoxieActivity" />
-        <activity android:name=".activity.demo.moxie.WebViewActivity" />
-        <activity android:name="com.moxie.client.MainActivity" />
+        <activity android:name=".activity.demo.view.paint.PaintActivity"/>
+        <activity android:name=".activity.demo.view.image.WaveViewActivity"/>
+        <activity android:name=".activity.demo.widget.wheelpicker.WheelPickerActivity"/>
+        <activity android:name=".activity.demo.widget.sweetalert.SweetAlertActivity"/>
+        <activity android:name=".activity.demo.widget.qrcode.DecoderActivity"/>
+        <activity android:name=".activity.demo.widget.marqueeview.MarqueeViewActivity"/>
+        <activity android:name=".activity.demo.security.ca.SecurityCAActivity"/>
+        <activity android:name=".activity.guide.GuideMainActivity"/>
+        <activity android:name=".activity.demo.widget.swipecard.SwipeCardActivity"/>
+        <activity android:name=".activity.demo.widget.blurry.BlurryActivity"/>
+        <activity android:name=".activity.list.ListRecyclerActivity"/>
+        <activity android:name=".activity.MainActivity"/>
+        <activity android:name=".activity.demo.widget.progress.ProgressWheelActivity"/>
+        <activity android:name=".activity.demo.moxie.MoxieActivity"/>
+        <activity android:name=".activity.demo.moxie.WebViewActivity"/>
+        <activity android:name="com.moxie.client.MainActivity"/>
 
         <meta-data
             android:name="twcal"
-            android:value="E60BD8CEB3E4F587" />
+            android:value="E60BD8CEB3E4F587"/>
+
+        <activity android:name=".activity.demo.widget.drag.DragActivity"/>
 
     </application>
 
