--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,9 +94,10 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
     compile files('libs/ikey_sdk.jar')
-    apt 'com.jakewharton:butterknife-compiler:8.4.0'
+    compile(name: 'moxie-client-1.2.7', ext: 'aar')
+    compile project(':view')
+    compile project(':core')
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.pnikosis:materialish-progress:1.0'
     compile 'com.facebook.stetho:stetho:1.4.2'
@@ -105,12 +106,12 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'jp.wasabeef:blurry:2.1.0'
     compile 'com.google.code.gson:gson:2.8.0'
-    compile(name: 'moxie-client-1.2.7', ext: 'aar')
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.cleveroad:fireworkypulltorefresh:1.0.3'
     compile 'com.baoyz.pullrefreshlayout:library:1.2.0'
     compile 'com.cjj.materialrefeshlayout:library:1.3.0'
-    compile project(':view')
-    compile project(':core')
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
+    testCompile 'junit:junit:4.12'
+    apt 'com.jakewharton:butterknife-compiler:8.4.0'
 }
 
