--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,15 +19,16 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppBaseTheme"
+        android:theme="@style/AppTheme"
         tools:replace="android:icon">
-        <activity android:name=".activity.login.LoginActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".activity.login.LoginActivity"/>
         <activity android:name=".activity.demo.view.paint.PaintActivity"/>
         <activity android:name=".activity.demo.view.image.WaveViewActivity"/>
         <activity android:name=".activity.demo.widget.wheelpicker.WheelPickerActivity"/>
@@ -39,7 +40,6 @@
         <activity android:name=".activity.demo.widget.swipecard.SwipeCardActivity"/>
         <activity android:name=".activity.demo.widget.blurry.BlurryActivity"/>
         <activity android:name=".activity.list.ListRecyclerActivity"/>
-        <activity android:name=".activity.MainActivity"/>
         <activity android:name=".activity.demo.widget.progress.ProgressWheelActivity"/>
         <activity android:name=".activity.demo.moxie.MoxieActivity"/>
         <activity android:name=".activity.demo.moxie.WebViewActivity"/>
