--- a/core/build.gradle
+++ b/core/build.gradle
@@ -39,7 +39,14 @@ dependencies {
     compile 'com.android.support:appcompat-v7:' + rootProject.ext.supportLibraryVersion
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
     compile 'com.uphyca:stetho_realm:2.0.0'
-
     testCompile 'junit:junit:4.12'
+
+    /* this is for debugging memory leak: https://github.com/square/leakcanary */
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
+
+    // Set this dependency to build and run Espresso tests
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
+    androidTestCompile 'com.android.support:support-annotations:' + rootProject.ext.supportLibraryVersion
 
 }
