--- a/view/build.gradle
+++ b/view/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:' + rootProject.ext.supportLibraryVersion
     testCompile 'junit:junit:4.12'
+    compile 'net.i2p.android.ext:floatingactionbutton:1.9.0'
 }
