--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -8,5 +8,22 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+<!--
+        &lt;!&ndash; LeakCanary &ndash;&gt;
+        <service
+            android:name=".app.VdpLeakService"
+            android:enabled="false"/>
+
+        &lt;!&ndash; LeakCanary &ndash;&gt;
+        <activity
+            android:name="com.squareup.leakcanary.internal.DisplayLeakActivity"
+            android:enabled="false"
+            android:icon="@drawable/leak_canary_icon"
+            android:label="@string/leak_canary_display_activity_label"
+            android:taskAffinity="com.squareup.leakcanary"
+            android:theme="@style/leak_canary_LeakCanary.Base"/>
+-->
+
+
     </application>
 </manifest>
