--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,6 +105,7 @@ dependencies {
     compile 'com.cleveroad:fireworkypulltorefresh:1.0.3'
     compile 'com.baoyz.pullrefreshlayout:library:1.2.0'
     compile 'com.cjj.materialrefeshlayout:library:1.3.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
 }
 
