--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,16 +8,12 @@ buildscript {
 }
 
 apply plugin: 'com.android.application'
-apply plugin: 'android-apt'
 apply plugin: 'com.getkeepsafe.dexcount'
 apply plugin: 'com.antfortune.freeline'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
-    enforceUniquePackageName = false
-    publishNonDefault true
-    defaultPublishConfig "debug"
 
     dexcount {
         format = "list"
@@ -105,7 +101,7 @@ dependencies {
     compile 'com.cleveroad:fireworkypulltorefresh:1.0.3'
     compile 'com.baoyz.pullrefreshlayout:library:1.2.0'
     compile 'com.cjj.materialrefeshlayout:library:1.3.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
-    apt 'com.jakewharton:butterknife-compiler:8.4.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 }
 
