--- a/core/build.gradle
+++ b/core/build.gradle
@@ -47,7 +47,10 @@ dependencies {
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
 
     // Set this dependency to build and run Espresso tests
-    testCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
+    testCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
     testCompile 'com.android.support:support-annotations:' + rootProject.ext.supportLibraryVersion
+
+    compile 'com.squareup.okhttp3:okhttp:3.9.0'
+    compile 'com.squareup.okhttp3:okhttp:3.9.0'
 
 }
