h5 file chooser test && android unit-test.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
         <activity
             android:name=".activity.demo.webview.WebViewTestActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.demo.webview.WebViewH5Activity"
+            android:screenOrientation="portrait" />
 
     </application>
 
