--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,17 +86,23 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    testCompile 'junit:junit:4.12'
+    androidTestCompile 'com.android.support.test:runner:1.0.1'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
+
     compile project(':core')
     compile 'com.pnikosis:materialish-progress:1.0'
     compile 'com.facebook.stetho:stetho:1.4.2'
     compile 'com.google.zxing:core:3.2.1'
     compile 'com.github.bumptech.glide:glide:4.0.0'
     compile 'jp.wasabeef:blurry:2.1.0'
-    compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.google.code.gson:gson:2.8.2'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.cleveroad:fireworkypulltorefresh:1.0.3'
     compile 'com.baoyz.pullrefreshlayout:library:1.2.0'
     compile 'com.cjj.materialrefeshlayout:library:1.3.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+
+    // google easy permission
+    implementation 'pub.devrel:easypermissions:1.1.2'
 }
 
