--- a/core/build.gradle
+++ b/core/build.gradle
@@ -37,18 +37,18 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:design:' + project.ext.supportLibraryVersion
-    compile 'com.android.support:appcompat-v7:' + project.ext.supportLibraryVersion
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:design:' + project.ext.supportLibraryVersion
+    implementation 'com.android.support:appcompat-v7:' + project.ext.supportLibraryVersion
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.uphyca:stetho_realm:2.0.0'
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 
     // Set this dependency to build and run Espresso tests
-    testCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
-    testCompile 'com.android.support:support-annotations:' + project.ext.supportLibraryVersion
+    testImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    testImplementation 'com.android.support:support-annotations:' + project.ext.supportLibraryVersion
 
     // http request
-    compile 'com.squareup.okhttp3:okhttp:3.9.0'
-    compile 'com.squareup.okhttp3:okhttp:3.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.9.0'
 
 }
