--- a/config.gradle
+++ b/config.gradle
@@ -9,8 +9,36 @@ ext {
     versionCode = 1
     versionName = '1.0'
 
+    // version config
+    appVersionCode = 1
+    appVersionName = '1.0'
+    coreVersionCode = 1
+    coreVersionName = '1.0'
+    widgetVersionCode = 1
+    widgetVersionName = '1.0'
+
     // app dependencies
-    supportLibraryVersion = '27.1.0'
+    supportLibraryVersion = '27.0.1'
+    constraintVersion = '1.1.2'
+    junitVersion = '4.12'
+    testRunnerVersion = '1.0.2'
+    testEspressoVersion = '3.0.2'
+    testEspressoCoreVersion = '3.0.1'
+    guavaVersion = '25.1'
+    glideVersion = '4.7.1'
     daggerVersion = '2.15'
-    guavaVersion = '18.0'
+
+    // retrofit & okhttp3
+    okhttp3Version = '3.10.0'
+    okhttp3LoggingVersion = '3.4.1'
+    retrofit2Version = '2.4.0'
+    retrofit2GsonVersion = '2.0.2'
+    stethoJsRhinoVersion = '1.3.1'
+    stethoOkHttp3Version = '1.4.2'
+
+    // BaseRecyclerViewAdapterHelper
+    BRVAHVersion = '2.9.30'
+    // Wheel Picker
+    wheelPickerVersion = '1.5.6'
+
 }
