--- a/core/build.gradle
+++ b/core/build.gradle
@@ -6,7 +6,6 @@ apply from: rootProject.projectDir.absolutePath + '/config.gradle'
 
 android {
     compileSdkVersion project.ext.compileSdkVersion
-    buildToolsVersion project.ext.buildToolsVersion
 
     defaultConfig {
         minSdkVersion project.ext.minSdkVersion
@@ -23,7 +22,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
 }
 
 repositories {
@@ -33,22 +31,21 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestCompile("com.android.support.test.espresso:espresso-core:$project.ext.testEspressoCoreVersion", {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:design:' + project.ext.supportLibraryVersion
-    compile 'com.android.support:appcompat-v7:' + project.ext.supportLibraryVersion
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.uphyca:stetho_realm:2.0.0'
-    testCompile 'junit:junit:4.12'
+    implementation "com.android.support:design:$project.ext.supportLibraryVersion"
+    implementation "com.android.support:appcompat-v7:$project.ext.supportLibraryVersion"
+    implementation "com.android.support.constraint:constraint-layout:$project.ext.constraintVersion"
+    implementation 'com.uphyca:stetho_realm:2.0.0'
+    testImplementation "junit:junit:$project.ext.junitVersion"
 
     // Set this dependency to build and run Espresso tests
-    testCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
-    testCompile 'com.android.support:support-annotations:' + project.ext.supportLibraryVersion
+    testImplementation "com.android.support.test.espresso:espresso-core:$project.ext.testEspressoCoreVersion"
+    testImplementation "com.android.support:support-annotations:$project.ext.supportLibraryVersion"
 
     // http request
-    compile 'com.squareup.okhttp3:okhttp:3.9.0'
-    compile 'com.squareup.okhttp3:okhttp:3.9.0'
+    implementation "com.squareup.okhttp3:okhttp:$project.ext.okhttp3Version"
 
 }
